--- a/subprojects/boot/build.gradle
+++ b/subprojects/boot/build.gradle
@@ -16,4 +16,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
+
+    // https://mvnrepository.com/artifact/software.amazon.awssdk/dynamodb-enhanced
+    implementation 'software.amazon.awssdk:dynamodb-enhanced:2.17.9'
 }
