--- a/subprojects/realizers/mysql/build.gradle
+++ b/subprojects/realizers/mysql/build.gradle
@@ -5,9 +5,6 @@ dependencies {
     implementation rootProject
     implementation project(':subprojects:providers')
 
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
-
-    // https://mvnrepository.com/artifact/software.amazon.awssdk/dynamodb-enhanced
-    testImplementation 'software.amazon.awssdk:dynamodb-enhanced:2.17.9'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
+    implementation 'org.springframework.boot:spring-boot-starter:2.5.3'
 }
