--- a/subprojects/realizers/services/build.gradle
+++ b/subprojects/realizers/services/build.gradle
@@ -5,6 +5,6 @@ dependencies {
     implementation rootProject
     implementation project(':subprojects:providers')
 
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
+    implementation 'org.springframework.boot:spring-boot-starter:2.5.3'
 }
