--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'subprojects:realizers:services'
 include 'subprojects:realizers:http'
 include 'subprojects:realizers:mysql'
 include 'subprojects:realizers:dynamodb'
+include 'subprojects:realizers:kafka'
 include 'subprojects:boot'
