--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,10 @@ rootProject.name = 'book'
 include 'subprojects:providers'
 include 'subprojects:realizers:services'
 include 'subprojects:realizers:http'
+include 'subprojects:realizers:grpc'
 include 'subprojects:realizers:mysql'
 include 'subprojects:realizers:dynamodb'
 include 'subprojects:realizers:kafka'
+include 'subprojects:realizers:s3'
+include 'subprojects:realizers:twitter'
 include 'subprojects:boot'
