--- a/build.gradle
+++ b/build.gradle
@@ -2,27 +2,26 @@ plugins {
     id 'java'
 }
 
-group 'com.github.jiantailang'
-version '1.0.0'
-
 allprojects {
-    apply plugin: 'java'
-
+    group 'com.github.jiantailang'
+    version '1.0.0'
     compileJava.options.encoding = 'UTF-8'
     compileTestJava.options.encoding = 'UTF-8'
 
     repositories {
         mavenCentral()
     }
+}
 
-    dependencies {
-        // https://mvnrepository.com/artifact/org.projectlombok/lombok
-        compileOnly 'org.projectlombok:lombok:1.18.20'
-        annotationProcessor 'org.projectlombok:lombok:1.18.20'
+archivesBaseName = 'book-core'
 
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    }
+dependencies {
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
 test {
