--- a/subprojects/boot/build.gradle
+++ b/subprojects/boot/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id 'application'
 }
 
-group 'com.github.jiantailang'
-version '1.0.0'
+archivesBaseName = 'book-boot'
 mainClassName = 'com.github.jiantailang.Application'
 
 dependencies {
@@ -11,13 +10,26 @@ dependencies {
     implementation project(':subprojects:providers')
     implementation project(':subprojects:realizers:services')
     implementation project(':subprojects:realizers:http')
+    implementation project(':subprojects:realizers:grpc')
     implementation project(':subprojects:realizers:mysql')
     implementation project(':subprojects:realizers:dynamodb')
     implementation project(':subprojects:realizers:kafka')
+    implementation project(':subprojects:realizers:s3')
+    implementation project(':subprojects:realizers:twitter')
+
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
 
     // https://mvnrepository.com/artifact/software.amazon.awssdk/dynamodb-enhanced
     implementation 'software.amazon.awssdk:dynamodb-enhanced:2.17.9'
+}
+
+distributions {
+    main {
+        distributionBaseName = 'book'
+    }
 }
