--- a/subprojects/providers/build.gradle
+++ b/subprojects/providers/build.gradle
@@ -1,5 +1,8 @@
-group 'com.github.jiantailang'
-version '1.0.0'
+plugins {
+    id 'java'
+}
+
+archivesBaseName = 'book-providers'
 
 dependencies {
     implementation rootProject
