--- a/subprojects/realizers/kafka/build.gradle
+++ b/subprojects/realizers/kafka/build.gradle
@@ -1,9 +1,16 @@
-group 'com.github.jiantailang'
-version '1.0.0'
+plugins {
+    id 'java'
+}
+
+archivesBaseName = 'book-kafka'
 
 dependencies {
     implementation rootProject
     implementation project(':subprojects:providers')
+
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
     // https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
     implementation 'org.springframework.kafka:spring-kafka:2.7.5'
