--- a/subprojects/realizers/mysql/build.gradle
+++ b/subprojects/realizers/mysql/build.gradle
@@ -1,9 +1,16 @@
-group 'com.github.jiantailang'
-version '1.0.0'
+plugins {
+    id 'java'
+}
+
+archivesBaseName = 'book-mysql'
 
 dependencies {
     implementation rootProject
     implementation project(':subprojects:providers')
+
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
     implementation 'org.springframework.boot:spring-boot-starter:2.5.3'
