--- a/subprojects/realizers/s3/build.gradle
+++ b/subprojects/realizers/s3/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-archivesBaseName = 'book-serivices'
+archivesBaseName = 'book-s3'
 
 dependencies {
     implementation rootProject
@@ -14,4 +14,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
     implementation 'org.springframework.boot:spring-boot-starter:2.5.3'
+
+    // https://mvnrepository.com/artifact/software.amazon.awssdk/s3
+    testImplementation 'software.amazon.awssdk:s3:2.17.14'
 }
